feat: apply authHeader
